<?xml version="1.0"?>

<package>
	<name>planning_scene_manager</name>
	<version>0.0.1</version>
	<author>Sebastian Mueller</author>
	<description>manages planning scene for object recognition, bonsai and objec fitter</description>
	<maintainer email="semueller@techfak.uni-bielefeld.de">Sebastian Mueller</maintainer>
	
	<license>td</license>
	
	<build_depend>moveit_msgs</build_depend>
	<build_depend>grasping_msgs</build_depend>
	<build_depend>planning_scene_manager_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>moveit_msgs</run_depend>
	<run_depend>grasping_msgs</run_depend>
	<run_depend>planning_scene_manager_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>actionlib</run_depend>


</package>
